Add comprehensive documentation, build guidelines, and Java SWIG bindings